# python-gettextpo

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
python/gettextpo/: __init__.py  gettextpo.pyi  lib.py
src/: lib.rs
tests/: test_main.py
