[package]
name = "gettextpo_"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gettextpo"
crate-type = ["cdylib"]

[dependencies]
gettextpo = { version = "0.1.0", path = "../rust-gettextpo" }
pyo3 = "0.19.0"
